--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Emile Gill</title>
+		<title>Suvodip Chakraborty</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -38,22 +38,22 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar" style="width:25%;">
-						<img src="images/profile_pic.png" alt="" />
+						<img src="images/suvodip.jpeg" alt="" />
 					</a>
 					<h1>
-						<strong>Emile Gill</strong>
+						<strong>Suvodip Chakraborty</strong>
 					</h1>
 					<h1>
-						Senior Data Analyst @ Accor
+						Ph. D. Researcher
 					</h1>
 					<h1>
-						BSc Physics, Imperial College London<br>
+						MS Signal Processing, Indian Institute of Technology, Kharagpur<br>
 					</h1>
 					<ul class="icons" style="font-size: 1.5rem;">
-						<li><a href="https://www.linkedin.com/in/emile-gill/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://medium.com/@emilegill743" target="_blank" class="icon brands fa-medium"><span class="label">Medium</span></a></li>
-						<li><a href="https://github.com/emilegill743" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://www.linkedin.com/in/suvodip-chakraborty-3b691813a/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://scholar.google.com/citations?user=T7ciEg8AAAAJ&hl=en/" target="_blank" class="icon brands fa-google-plus-g"><span class="label">scholar google</span></a></li>
+						<li><a href="https://github.com/suvodip1212" target="_blank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:suvodip.107019@gmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
 				<div class="col-6 col-12-small">
@@ -75,13 +75,17 @@
 							<h2>About me</h2>
 						</header>
 						<p>
-							I graduated from Imperial College London with a BSc in Physics in 2018.
-							Subsequently, I joined Accor's Northern Europe Head Office in London as a Data Analyst,
-							where I'm currently working as a Senior Data Analyst. I'm an ardent autodidact,
-							passionate about all things Data Science and programming, and love to share my
-							projects and ideas on my Medium blog
-							<a href="https://medium.com/@emilegill743" target="_blank">
-								@emilegill743
+							I graduated from Indian Institute of Technology, Kharagpur in 2017 with a masters in signal processing.
+							I have been aware that to be a student of Human computer interaction (HCI) theoretical study
+							and coursework is one thing, the development of practical abilities is another thing. In addition
+							to this, HCI is more an applied subject than a theoretical one. With this realization, I have
+							made conscious efforts to participate in research projects. I worked alongside a team of researchers
+							developing a multi-modal approach to study the effects of meditation on the cognitive and affective
+							states. In which about data from 300 participants were recorded using non-invasive techniques.
+							One of the major aspects of this project was estimating the cognitive state of an individual using the
+							Eye tracking data acquired during the experiments. 
+							<a href="https://scholar.google.com/citations?user=T7ciEg8AAAAJ&hl=en/" target="_blank">
+								@Google scholar
 							</a>.
 							You can check out my recent work below 😉
 						</p>
@@ -96,8 +100,8 @@
 							<!-- <li><a href="#" class="button primary">Learn More</a></li> -->
 							<li>
 								<a
-								href="/files/CV__Emile_Gill.pdf"
-								download="CV__Emile_Gill"
+								href="/files/cv-suvodip Chakraborty.pdf"
+								download="CV__Suvodip"
 								class="button primary icon solid fa-download"
 								onclick="trackCVDownload()">
 								Download CV</a></li>
@@ -110,48 +114,49 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
-								href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
+								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
 								class="image fit thumb"
 								target="_blank">
-									<img src="images/groceries.jpg"
+									<img src="images/figure_1.jpg"
 									alt="Photo by nrd on Unsplash" />
 								</a>
 								<a 
-								href="https://towardsdatascience.com/finding-a-grocery-delivery-slot-the-smart-way-f4f0800c4afe?"
+								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
 								target="_blank">
-									Finding a Grocery Delivery Slot the Smart Way
+								Localization of eye saccadic signatures in electrooculograms using sparse representations with data driven dictionaries
 								</a>
-								<p>Using Python, Heroku and Twilio to scrape data from a grocery website’s API and get a text notification when slots become available.</p>
+								<p style="text-align:justify">In this paper, we propose two methods for localizing saccadic eye movement signatures from Electrooculograms (EOG). The first approach uses a sparse representation of data-driven dictionaries of saccadic movements. In this approach, we match the EOG subsequence with the dictionary element using distance metrics to identify the saccades. The second approach is to compare a saccadic signature template with the EOG subsequence using Dynamic Time Warping (DTW). We find that the proposed methods have advantages over one another in context specific applications. The first method is significantly faster with considerable accuracy, while the second approach is more accurate.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
-								href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+								href="https://ieeexplore.ieee.org/abstract/document/8487864"
 								class="image fit thumb"
 								target="_blank">
-									<img src="images/elephant.jpg"
+									<img src="images/figure_3.png"
 									alt="Photo by nrd on Unsplash" />
 								</a>
 								<a 
-								href="https://towardsdatascience.com/a-practical-guide-to-getting-set-up-with-postgresql-a1bf37a0cfd7?source=friends_link&sk=7bfaa1d384c5035ab8ef082d53fcac8f"
+								href="https://ieeexplore.ieee.org/abstract/document/8487864"
 								target="_blank">
-								A Practical Guide to Getting Set-up with PostgreSQL 🐘
+								Modeling and Analysis of Electrodes for Electrooculography
 								</a>
-								<p>Getting started with PostgreSQL, pgAdmin and SQLAlchemy for Python. Incorporate SQL into the heart of your Python projects.</p>
+								
+								<p style="text-align:justify"> Selection of suitable electrodes for practical applications in electrooculography (EOG) is an open research problem. The present paper compares electrodes made of various materials (Copper, gold, silver and Ag-Ag-Cl) in terms of SNR, shape and surface area and employs statistical analysis to address the issue of choice of electrodes. A low-cost dry electrode assembly for EOG has also been proposed. The preliminary findings suggest that the proposed set of electrodes improve the quality of EOG recordings and are thus suitable for a wide range of EOG studies and BCI applications. Besides, the design of the electrodes has been tested on a number of subjects and found to ensure a more comfortable fit compared to the conventional electrodes and may hence be suitable for use over a long period of time.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
-								href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
+								href="https://ieeexplore.ieee.org/abstract/document/8589865"
 								class="image fit thumb"
 								target="_blank">
-									<img src="images/web.jpg"
+									<img src="images/figure_2.png"
 									alt="Photo by nrd on Unsplash" />
 								</a>
 								<a 
-								href="https://medium.com/@emilegill743/e9680bcd94aa?source=friends_link&sk=82a656615073264244a1de7d0f0dc35e"
+								href="https://ieeexplore.ieee.org/abstract/document/8589865"
 								target="_blank">
-								Launch a Website for Free in 5 simple steps with GitHub Pages
+								Active Sensors for the Acquisition of Physiological Signals
 								</a>
-								<p>Get your personal portfolio website on the web in less than 10 minutes.</p>
+								<p style="text-align:justify">The acquisition of physiological signals from human subjects has been an important research area for quite some time. Common issues involved in standard schemes for acquisition and processing of physiological signals, such as the possibility of the electrodes being easily damaged, or the probability of irritation upon prolonged usage, necessitate the development of active sensors for the acquisition of physiological signals. The present paper proposes the use of gold-plated copper electrodes with active compensation to obtain electroencephalogram (EEG), electrooculogram (EOG), and electrocardiogram (ECG) signals. The quality of the signal obtained has been compared with those obtained with standard sensors. The paper has two significant contributions: the proposal of sensors with active compensation, and preparation of a composite database.</p>
 							</article>
 						</div>
 						<!-- <ul class="actions">
@@ -527,7 +532,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="mailto:emilegill743@hotmail.com" target="_blank" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul> -->
 					<ul class="copyright">
-						<li>&copy; Emile Gill</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; suvodip </li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer> 
