fixed cv download

--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
 							<!-- <li><a href="#" class="button primary">Learn More</a></li> -->
 							<li>
 								<a
-								href="/files/cv-suvodip Chakraborty.pdf"
-								download="CV__Suvodip"
+								href="https://raw.githubusercontent.com/suvodip1212/webpage/main/files/cv-suvodip%20Chakraborty.pdf"
+								download="cv-suvodip%20Chakraborty"
 								class="button primary icon solid fa-download"
 								onclick="trackCVDownload()">
 								Download CV</a></li>
