--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<strong>Suvodip Chakraborty</strong>
 					</h1>
 					<h1>
-						Ph. D. Researcher
+						Ph. D. Researcher, Singapore-ETH Centre
 					</h1>
 					<h1>
 						MS Signal Processing, Indian Institute of Technology, Kharagpur<br>
