--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 						<strong>Suvodip Chakraborty</strong>
 					</h1>
 					<h1>
-						Ph. D. Researcher, Singapore-ETH Centre
+						Ph. D. Researcher, Singapore-ETH Centre, CREATE TOWER, Singapore
 					</h1>
 					<h1>
-						MS Signal Processing, Indian Institute of Technology, Kharagpur<br>
+						MS Signal Processing, Indian Institute of Technology, Kharagpur, India<br>
 					</h1>
 					<ul class="icons" style="font-size: 1.5rem;">
 						<li><a href="https://www.linkedin.com/in/suvodip-chakraborty-3b691813a/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
