--- a/index.html
+++ b/index.html
@@ -87,7 +87,28 @@
 							<a href="https://scholar.google.com/citations?user=T7ciEg8AAAAJ&hl=en/" target="_blank">
 								@Google scholar
 							</a>.
+							
+				<blockquote>My research seeks to advance subsurface imaging
+				toward more robust and uncertainty-aware solutions through the
+				intersection of field experiments, numerical simulation, and
+				high-performance computing with applications in site characterization
+				and natural hazards.</blockquote>
+
+				<section class="action", style="text-align: center;">
+					<a href="#current" class="button">Current Work</a>
+					<a href="#past" class="button">Published Work</a>
+					<a href="#software" class="button">Software</a>
+					<a href="#collaborations" class="button">Collaborations</a>
+				</section>
+
+				<section class="action", style="text-align: center;">
+					<a href="#data" class="button">Published Data</a>
+					<a href="#consult" class="button">Technical Reports</a>
+					<a href="#courses" class="button">Open Access Courses Material</a>
+				</section>
+			</section>
 							You can check out my recent work below 😉
+							
 						</p>
 						<!-- <p>Passionate about leveraging data and programming to solve business problems. BSc Physics Imperial College London. Experience with: Python (pandas, numpy, selenium, requests, beautiful soup); VBA; data manipulation, cleaning, analysis, visualisation; web scraping.</p> -->
 						<!-- <ul class="icons" style="font-size: 1.5rem">
