--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="two">
+					<section id="current">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
