--- a/index.html
+++ b/index.html
@@ -184,6 +184,34 @@
 							<li><a href="#" class="button primary">Full Portfolio</a></li>
 						</ul> -->
 					</section>
+	
+			<section id="consult">
+				<h2>Technical Reports</h2>
+				<div class="row">
+					<ul>
+						<li>Cox, B.R., <u>Vantassel, J.P.</u> (2021). "Deep Shear Wave Velocity Profiling Using MASW and
+							MAM Surface Wave Methods: Idaho National Laboratory" Geotechnical Engineering Report GR21-03,
+							The University of Texas at Austin. May 2021.</li>
+						<li>Cox, B.R., <u>Vantassel, J.P.</u>, & Yust, M. (2021). "Deep Shear Wave Velocity Profiling Using MASW and
+							MAM Surface Wave Methods: Pantex Plant PSHA Site Investigation". Geotechnical Engineering
+							Report GR21-01, The University of Texas at Austin. January 2021.</li>
+						<li>Cox, B.R. & <u>Vantassel, J.P.</u> (2019). "Deep Shear Wave Velocity Profiling Using MASW and MAM
+							Surface Wave Methods: Amarapura Urban Development Project (AUDP)". October 2019.</li>
+						<li>Cox, B.R. & <u>Vantassel, J.P.</u> (2019). "Shear Wave Velocity Profiling Using MASW and MAM
+							Surface Wave Methods: Wellington Girls' College in Wellington, New Zealand". May 2019.</li>
+						<li>Cox, B.R. & <u>Vantassel, J.P.</u> (2017). "Deep Shear Wave Velocity Profiling Using MASW and MAM
+							Surface Wave Methods: SCDOT Deep Borehole Sites near Andrews and Conway, South Carolina",
+							Geotechnical Engineering Report GR17-18, The University of Texas at Austin. July 2017.</li>
+						<li>Cox, B.R., Teague, D., <u>Vantassel, J.P.</u> & Yust, M. (2017). “Deep Shear Wave Velocity Profiling Using MASW and
+							MAM Measurements: East Bay Municipal Utility District (EBMUD) Delta Tunnel
+							Project,” Geotechnical Engineering Report GR17-04, The University of Texas at Austin.
+							January 2017.</li>
+					</ul>
+				</div>
+			</section>
+	
+	
+	
 
 				<!-- Three
 					<section id="three">
