--- a/index.html
+++ b/index.html
@@ -75,15 +75,13 @@
 							<h2>About me</h2>
 						</header>
 						<p>
-							I graduated from Indian Institute of Technology, Kharagpur in 2018 with a masters in signal processing.
+							I am a s a doctoral student with the Future Resilient Systems (FRS) programme at the Singapore-ETH Centre, which is part of the Campus for Research Excellence and Technological Enterprise (CREATE) established by Singapore's National Research Foundation. My involvement with FRS began in January 2021 after completing my Master's degree at the Indian Institute of Technology Kharagpur, India. My research primarily focuses on the development of visualization, interaction, and notification frameworks for the communication of predicted disruptions in urban systems. My work is significantly based in the field of Human-Computer Interaction and eye-tracking, where I contribute to enhancing the resilience of urban systems by improving how disruptions are communicated and understood..
 							I have been aware that to be a student of Human computer interaction (HCI) theoretical study
 							and coursework is one thing, the development of practical abilities is another thing. In addition
 							to this, HCI is more an applied subject than a theoretical one. With this realization, I have
 							made conscious efforts to participate in research projects. I worked alongside a team of researchers
-							developing a multi-modal approach to study the effects of meditation on the cognitive and affective
-							states. In which about data from 300 participants were recorded using non-invasive techniques.
-							One of the major aspects of this project was estimating the cognitive state of an individual using the
-							Eye tracking data acquired during the experiments. 
+							developing a multi-modal approach in estimating the cognitive state of an individual using the
+							eye tracking data and other sensor acquired during the experiments. 
 							<a href="https://scholar.google.com/citations?user=T7ciEg8AAAAJ&hl=en/" target="_blank">
 								@Google scholar
 							</a>.
