--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<h2>About me</h2>
 						</header>
 						<p>
-							I am a s a doctoral student with the Future Resilient Systems (FRS) programme at the Singapore-ETH Centre, which is part of the Campus for Research Excellence and Technological Enterprise (CREATE) established by Singapore's National Research Foundation. My involvement with FRS began in January 2021 after completing my Master's degree at the Indian Institute of Technology Kharagpur, India. My research primarily focuses on the development of visualization, interaction, and notification frameworks for the communication of predicted disruptions in urban systems. My work is significantly based in the field of Human-Computer Interaction and eye-tracking, where I contribute to enhancing the resilience of urban systems by improving how disruptions are communicated and understood..
+							I am a doctoral student with the Future Resilient Systems (FRS) programme at the Singapore-ETH Centre, which is part of the Campus for Research Excellence and Technological Enterprise (CREATE) established by Singapore's National Research Foundation. My involvement with FRS began in January 2021 after completing my Master's degree at the Indian Institute of Technology Kharagpur, India. My research primarily focuses on the development of visualization, interaction, and notification frameworks for the communication of predicted disruptions in urban systems. My work is significantly based in the field of Human-Computer Interaction and eye-tracking, where I contribute to enhancing the resilience of urban systems by improving how disruptions are communicated and understood..
 							I have been aware that to be a student of Human computer interaction (HCI) theoretical study
 							and coursework is one thing, the development of practical abilities is another thing. In addition
 							to this, HCI is more an applied subject than a theoretical one. With this realization, I have
@@ -86,11 +86,10 @@
 								@Google scholar
 							</a>.
 							
-				<blockquote>My research seeks to advance subsurface imaging
+				<blockquote>My research seeks to advance decision making support tools
 				toward more robust and uncertainty-aware solutions through the
 				intersection of field experiments, numerical simulation, and
-				high-performance computing with applications in site characterization
-				and natural hazards.</blockquote>
+				high-performance computing with applications in resilience.</blockquote>
 
 				<section class="action", style="text-align: center;">
 					<a href="#current" class="button">Current Work</a>
