--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				<blockquote>My research seeks to advance decision making support tools
 				toward more robust and uncertainty-aware solutions through the
 				intersection of field experiments, numerical simulation, and
-				high-performance computing with applications in resilience.</blockquote>
+				human-computer interaction with applications in resilience.</blockquote>
 
 				<section class="action", style="text-align: center;">
 					<a href="#current" class="button">Current Work</a>
@@ -130,6 +130,40 @@
 					<section id="current">
 						<h2>Recent Work</h2>
 						<div class="row">
+														<article class="col-6 col-12-xsmall work-item">
+								<a 
+								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/figure_1.jpg"
+									alt="Photo by nrd on Unsplash" />
+								</a>
+								<a 
+								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
+								target="_blank">
+								Localization of eye saccadic signatures in electrooculograms using sparse representations with data driven dictionaries
+								</a>
+
+															
+								<article class="col-6 col-12-xsmall work-item">
+								<a 
+								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/figure_1.jpg"
+									alt="Photo by nrd on Unsplash" />
+								</a>
+								<a 
+								href="https://www.tandfonline.com/doi/full/10.1080/13658816.2024.2348747"
+								target="_blank">
+								**Making spatial decisions under pressure? New research reveals how visualization techniques can significantly reduce cognitive load. **
+
+Traffic controllers and other professionals working in safety-critical domains constantly face spatial decision situations under high pressure. But what if there was a simple way to improve their decision-making abilities? This new study at Singapore-ETH Centre explores the impact of different visualization techniques on cognitive load in time-critical tasks using eye tracking. The study also examines the differences in scanning patterns resulting from different decision-making strategies through gaze transition entropy. The results are sure to surprise you!
+
+								P.S. Want to know which visualization technique reigns supreme? Read the full article here Influence of uncertainty visualization on cognitive load in a safety-critical, time-critical decision-making task
+								</a>
+
+															
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
 								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
