--- a/index.html
+++ b/index.html
@@ -157,13 +157,15 @@
 								<a 
 								href="https://www.tandfonline.com/doi/full/10.1080/13658816.2024.2348747"
 								target="_blank">
+									</a>
+									<p style="text-align:justify">
 								**Making spatial decisions under pressure? New research reveals how visualization techniques can significantly reduce cognitive load. **
 
 Traffic controllers and other professionals working in safety-critical domains constantly face spatial decision situations under high pressure. But what if there was a simple way to improve their decision-making abilities? This new study at Singapore-ETH Centre explores the impact of different visualization techniques on cognitive load in time-critical tasks using eye tracking. The study also examines the differences in scanning patterns resulting from different decision-making strategies through gaze transition entropy. The results are sure to surprise you!
 
-								P.S. Want to know which visualization technique reigns supreme? Read the full article here Influence of uncertainty visualization on cognitive load in a safety-critical, time-critical decision-making task
-								</a>
+								P.S. Want to know which visualization technique reigns supreme? Read the full article here Influence of uncertainty visualization on cognitive load in a safety-critical, time-critical decision-making task </p>
 
+									
 															
 							<article class="col-6 col-12-xsmall work-item">
 								<a 
