--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Suvodip Chakraborty</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -133,18 +133,15 @@
 							
 						<article class="col-6 col-12-xsmall work-item">
 								<a 
-								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
-								class="image fit thumb"
+								href="https://ieeexplore.ieee.org/document/10629234"
 								target="_blank">
-									<img src="images/figure_1.jpg"
-									alt="Photo by nrd on Unsplash" />
+								Estimating Perceived Mental Workload From Eye-Tracking Data Based on Benign Anisocoria
 								</a>
-								<a 
-								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
-								target="_blank">
-								Localization of eye saccadic signatures in electrooculograms using sparse representations with data driven dictionaries
-								</a>
-								<p style="text-align:justify">In this paper, we propose two methods for localizing saccadic eye movement signatures from Electrooculograms (EOG). The first approach uses a sparse representation of data-driven dictionaries of saccadic movements. In this approach, we match the EOG subsequence with the dictionary element using distance metrics to identify the saccades. The second approach is to compare a saccadic signature template with the EOG subsequence using Dynamic Time Warping (DTW). We find that the proposed methods have advantages over one another in context specific applications. The first method is significantly faster with considerable accuracy, while the second approach is more accurate.</p>
+								<p style="text-align:justify">Did you know your left and right pupil sizes are not the same?
+
+ 
+
+In a recently accepted article, we introduce two new eye-tracking metrics -- based on the minute differences between left and right pupil diameter -- that can accurately measure cognitive load. By analyzing pupil size asymmetry between the left and right eye, we've developed an effective method for assessing mental workload. Our research shows promising results in a case study using an N-back test.</p>
 							</article>
 
 															
@@ -153,7 +150,7 @@
 								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
 								class="image fit thumb"
 								target="_blank">
-									<img src="images/figure_1.jpg"
+									<img src="images/BA.jpg"
 									alt="Photo by nrd on Unsplash" />
 								</a>
 								<a 
