--- a/index.html
+++ b/index.html
@@ -132,22 +132,25 @@
 						<div class="row">
 							
 						<article class="col-6 col-12-xsmall work-item">
+															<a 
+								href="https://ieeexplore.ieee.org/document/10629234"
+								class="image fit thumb"
+								target="_blank">
+									<img src="images/thms.png"
+									alt="Photo by nrd on Unsplash" />
+								</a>
 								<a 
 								href="https://ieeexplore.ieee.org/document/10629234"
 								target="_blank">
 								Estimating Perceived Mental Workload From Eye-Tracking Data Based on Benign Anisocoria
 								</a>
-								<p style="text-align:justify">Did you know your left and right pupil sizes are not the same?
-
- 
-
-In a recently accepted article, we introduce two new eye-tracking metrics -- based on the minute differences between left and right pupil diameter -- that can accurately measure cognitive load. By analyzing pupil size asymmetry between the left and right eye, we've developed an effective method for assessing mental workload. Our research shows promising results in a case study using an N-back test.</p>
+								<p style="text-align:justify">Did you know your left and right pupil sizes are not the same? In a recently accepted article, we introduce two new eye-tracking metrics -- based on the minute differences between left and right pupil diameter -- that can accurately measure cognitive load. By analyzing pupil size asymmetry between the left and right eye, we've developed an effective method for assessing mental workload. Our research shows promising results in a case study using an N-back test.</p>
 							</article>
 
 															
 								<article class="col-6 col-12-xsmall work-item">
 								<a 
-								href="https://www.sciencedirect.com/science/article/abs/pii/S0167865517304075"
+								href="https://www.tandfonline.com/doi/full/10.1080/13658816.2024.2348747"
 								class="image fit thumb"
 								target="_blank">
 									<img src="images/BA.jpg"
