--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar" style="width:25%;">
-						<img src="images/suvodip.jpeg" alt="" />
+						<img src="images/Suvodip_2.png" alt="" />
 					</a>
 					<h1>
 						<strong>Suvodip Chakraborty</strong>
@@ -91,7 +91,7 @@
 				intersection of field experiments, numerical simulation, and
 				human-computer interaction with applications in resilience.</blockquote>
 
-				<section class="action", style="text-align: center;">
+				<!-- <section class="action", style="text-align: center;">
 					<a href="#current" class="button">Current Work</a>
 					<a href="#past" class="button">Published Work</a>
 					<a href="#software" class="button">Software</a>
@@ -102,8 +102,8 @@
 					<a href="#data" class="button">Published Data</a>
 					<a href="#consult" class="button">Technical Reports</a>
 					<a href="#courses" class="button">Open Access Courses Material</a>
-				</section>
-			</section>
+				</section>-->			
+					</section>
 							You can check out my recent work below 😉
 							
 						</p>
@@ -215,33 +215,6 @@
 							<li><a href="#" class="button primary">Full Portfolio</a></li>
 						</ul> -->
 					</section>
-	
-			<section id="consult">
-				<h2>Technical Reports</h2>
-				<div class="row">
-					<ul>
-						<li>Cox, B.R., <u>Vantassel, J.P.</u> (2021). "Deep Shear Wave Velocity Profiling Using MASW and
-							MAM Surface Wave Methods: Idaho National Laboratory" Geotechnical Engineering Report GR21-03,
-							The University of Texas at Austin. May 2021.</li>
-						<li>Cox, B.R., <u>Vantassel, J.P.</u>, & Yust, M. (2021). "Deep Shear Wave Velocity Profiling Using MASW and
-							MAM Surface Wave Methods: Pantex Plant PSHA Site Investigation". Geotechnical Engineering
-							Report GR21-01, The University of Texas at Austin. January 2021.</li>
-						<li>Cox, B.R. & <u>Vantassel, J.P.</u> (2019). "Deep Shear Wave Velocity Profiling Using MASW and MAM
-							Surface Wave Methods: Amarapura Urban Development Project (AUDP)". October 2019.</li>
-						<li>Cox, B.R. & <u>Vantassel, J.P.</u> (2019). "Shear Wave Velocity Profiling Using MASW and MAM
-							Surface Wave Methods: Wellington Girls' College in Wellington, New Zealand". May 2019.</li>
-						<li>Cox, B.R. & <u>Vantassel, J.P.</u> (2017). "Deep Shear Wave Velocity Profiling Using MASW and MAM
-							Surface Wave Methods: SCDOT Deep Borehole Sites near Andrews and Conway, South Carolina",
-							Geotechnical Engineering Report GR17-18, The University of Texas at Austin. July 2017.</li>
-						<li>Cox, B.R., Teague, D., <u>Vantassel, J.P.</u> & Yust, M. (2017). “Deep Shear Wave Velocity Profiling Using MASW and
-							MAM Measurements: East Bay Municipal Utility District (EBMUD) Delta Tunnel
-							Project,” Geotechnical Engineering Report GR17-04, The University of Texas at Austin.
-							January 2017.</li>
-					</ul>
-				</div>
-			</section>
-	
-	
 	
 
 				<!-- Three
